# intellegal

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: clause-presence-checks.md  contracts-rag-assistant.md  document-ingestion.md  ocr-text-extraction.md
docs/contracts/: internal-api.openapi.yaml  public-api.openapi.yaml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
frontend/src/: styles.css
go-api/: Dockerfile  go.mod  go.sum
py-ai-api/: .coverage  Dockerfile  README.md  pyproject.toml
py-ai-api/py_ai_api/: analysis.py  config.py  db.py  extraction.py  gemini.py  main.py  search.py
py-ai-api/py_ai_api/api/: __init__.py  app.py  auth.py  dependencies.py  schemas.py
py-ai-api/py_ai_api/api/routes/: __init__.py  internal.py
py-ai-api/py_ai_api/models/: __init__.py  analysis.py  extraction.py  indexing.py  search.py
py-ai-api/py_ai_api/services/: __init__.py  analysis.py  extraction.py  gemini.py  indexing.py  search.py
py-ai-api/py_ai_api/storage/: __init__.py  postgres.py  qdrant.py
py-ai-api/py_ai_api/utils/: __init__.py  confidence.py
py-ai-api/tests/: test_analysis.py  test_auth.py  test_bootstrap.py  test_db.py  test_extraction.py  test_gemini.py  test_logging.py  test_search.py
py-ai-api/tests/integration/: test_bootstrap.py
py-ai-api/tests/unit/: test_analysis.py  test_auth.py  test_config.py  test_db.py  test_extraction.py  test_gemini.py  test_indexing.py  test_logging.py  test_qdrant.py  test_search.py
scripts/: merge-go-coverprofiles.sh
(+73 files in other folders)
